# btcpay-django

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  boot_django.py  makemigrations.py  pyproject.toml  runtests.py  setup.cfg  tox.ini
btcpay_django/: __init__.py  admin.py  app_settings.py  models.py  utils.py
btcpay_django/migrations/: 0001_initial.py
