[tool.poetry]
name = "btcpay-django"
version = "0.1.0"
description = ""
authors = ["Crawford Leeds <crawford@crawfordleeds.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
